--- a/banhpia.html
+++ b/banhpia.html
@@ -39,7 +39,7 @@
       <header>
         <nav class="navbar navbar-dark  bg-dark navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="file:///C:/Users/HT/Downloads/choke.png" alt="" width="150px" height="100px"></a>
+            <a class="navbar-brand" href="index.html"><img src="choke.png" alt="" width="150px" height="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
