--- a/banhpia.html
+++ b/banhpia.html
@@ -66,7 +66,7 @@
       </header>
       <br><br>
         <div class="container">
-            <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z5513208764834_6ed6759a2273ce7a62269dc08f3c4423.jpg" alt="" width="300" height="300">
+            <img src="z5513208764834_6ed6759a2273ce7a62269dc08f3c4423.jpg" alt="" width="300" height="300">
             <div class="main">
                 <h1>Bánh Pía Nhân Can Xại</h1>
                 <br> <h3>85.000 đ</h3> <br>
