--- a/banhdongtien.html
+++ b/banhdongtien.html
@@ -39,7 +39,7 @@
       <header>
         <nav class="navbar navbar-dark  bg-dark navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="file:///C:/Users/HT/Downloads/choke.png" alt="" width="150px" height="100px"></a>
+            <a class="navbar-brand" href="choke.png" alt="" width="150px" height="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -66,7 +66,7 @@
       </header>
       <br><br>
         <div class="container">
-            <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="" width="300" height="300">
+            <img src="z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="" width="300" height="300">
             <div class="main">
                 <h1>Bánh đồng tiền 3 vị</h1>
                 <br> <h3>85.000 đ</h3> <br>
