--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>shop.choke.com</title>
   <link rel="stylesheet" href="bootstrap5/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <link rel="icon" href="file:///C:/Users/HT/Downloads/choke.png">
+  <link rel="icon" href="choke.png">
   <link rel="stylesheet" href="style.css">
 </head>
   <body>
       <header>
         <nav class="navbar navbar-dark  bg-dark navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="file:///C:/Users/HT/Downloads/choke.png" alt="" width="150px" height="100px"></a>
+            <a class="navbar-brand" href="index.html"><img src="choke.png" alt="" width="150px" height="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +48,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z5513208764834_6ed6759a2273ce7a62269dc08f3c4423.jpg" alt="">
+                  <img src="z5513208764834_6ed6759a2273ce7a62269dc08f3c4423.jpg" alt="">
                 </a>
                 <br> <a href="banhpia.html" class="buy-now">Mua ngay</a>
               </div>
@@ -62,7 +62,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/8.jpg" alt="">
+                  <img src="8.jpg" alt="">
                 </a>
                 <br> <a href="khomuc.html" class="buy-now">Mua ngay</a>
               </div>
@@ -76,7 +76,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z4749208176253_ea86bcf95e233b5bfee8f377b45161fa.jpg" alt="">
+                  <img src="z4749208176253_ea86bcf95e233b5bfee8f377b45161fa.jpg" alt="">
                 </a>
                 <br> <a href="khobovun.html" class="buy-now">Mua ngay</a>
               </div>
@@ -90,7 +90,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/1.jpg" alt="">
+                  <img src="1.jpg" alt="">
                 </a>
                 <br> <a href="khobo.html" class="buy-now">Mua ngay</a>
               </div>
@@ -104,7 +104,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z4812370487631_d168068b5e1673eae8bcec31be35a591.jpg" alt="">
+                  <img src="z4812370487631_d168068b5e1673eae8bcec31be35a591.jpg" alt="">
                 </a>
                 <br> <a href="tragungcamque.html" class="buy-now">Mua ngay</a>
               </div>
@@ -118,7 +118,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/37.jpg" alt="">
+                  <img src="37.jpg" alt="">
                 </a>
                 <br> <a href="setbanhtrang.html" class="buy-now">Mua ngay</a>
               </div>
@@ -132,7 +132,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/38.jpg" alt="">
+                  <img src="38.jpg" alt="">
                 </a>
                 <br> <a href="tralai.html" class="buy-now">Mua ngay</a>
               </div>
@@ -146,7 +146,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="">
+                  <img src=z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="">
                 </a>
                 <br> <a href="banhdongtien.html" class="buy-now">Mua ngay</a>
               </div>
