--- a/loicamon.html
+++ b/loicamon.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>shop.choke.com</title>
   <link rel="stylesheet" href="bootstrap5/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <link rel="icon" href="file:///C:/Users/HT/Downloads/choke.png">
+  <link rel="icon" href="choke.png">
 </head>
   <body>
     <style>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-dark  bg-dark navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="file:///C:/Users/HT/Downloads/choke.png" alt="" width="150px" height="100px"></a>
+            <a class="navbar-brand" href="index.html"><img src="choke.png" alt="" width="150px" height="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
