--- a/setbanhtrang.html
+++ b/setbanhtrang.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>shop.choke.com</title>
   <link rel="stylesheet" href="bootstrap5/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <link rel="icon" href="file:///C:/Users/HT/Downloads/choke.png">
+  <link rel="icon" href="choke.png">
 </head>
   <body>
     <style>
@@ -39,7 +39,7 @@
       <header>
         <nav class="navbar navbar-dark  bg-dark navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="file:///C:/Users/HT/Downloads/choke.png" alt="" width="150px" height="100px"></a>
+            <a class="navbar-brand" href="index.html"><img src="choke.png" alt="" width="150px" height="100px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -66,7 +66,7 @@
       </header>
       <br><br>
         <div class="container">
-            <img src="file:///D:/T%C3%A0i%20Li%E1%BB%87u%20Thi%20Web/anhcuachuc/37.jpg" alt="" width="300" height="300">
+            <img src="37.jpg" alt="" width="300" height="300">
             <div class="main">
                 <h1>Set Bánh Tráng Dẻo Ruốc Bơ Trứng Muối</h1>
                 <br> <h3>130.000 đ</h3> <br>
