--- a/gioithieu.html
+++ b/gioithieu.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>shop.choke.com</title>
   <link rel="stylesheet" href="bootstrap5/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <link rel="icon" href="file:///C:/Users/HT/Downloads/choke.png">
+  <link rel="icon" href="choke.png">
 </head>
   <body>
     <style>
