--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="product-iteam">
               <div class="product-top">
                 <a href="" class="product-thumb">
-                  <img src=z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="">
+                  <img src="z5458890772777_df6c56c7666ef9d74f9e3fd6b6abedba.jpg" alt="">
                 </a>
                 <br> <a href="banhdongtien.html" class="buy-now">Mua ngay</a>
               </div>
